tests/NormalTests/paczka1/fuzzy1/48979787.err
Error in line 2: A876 A578 64,3
Error in line 11: TQZkapgSu3I A876 52,7
Error in line 10: A876 A876 49,6
Error in line 16: UXcep34 A876 2,4
Error in line 17: UXcep34 A578 83,6
Error in line 24: DdbMHU A962 95,9
Error in line 28: GXX A193 78,6
Error in line 30: DdbMHU A193 30,4
Error in line 31: trZ A876 19,8
